<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/history_tabs_text_size"
        android:background="@drawable/tabs_background"
        android:layout_weight="1"
        android:paddingTop="@dimen/history_tabs_top_bottom_padding"
        android:paddingBottom="@dimen/history_tabs_top_bottom_padding"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:id="@+id/tab1"
        android:text="@string/calendar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tabs_background"
        android:textSize="@dimen/history_tabs_text_size"
        android:layout_weight="1"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:paddingTop="@dimen/history_tabs_top_bottom_padding"
        android:paddingBottom="@dimen/history_tabs_top_bottom_padding"
        android:id="@+id/tab2"
        android:text="@string/all_habits"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/tabs_background"
        android:textSize="@dimen/history_tabs_text_size"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/history_tabs_top_bottom_padding"
        android:paddingBottom="@dimen/history_tabs_top_bottom_padding"
        android:id="@+id/tab3"
        android:text="@string/achievement"/>
</LinearLayout>