<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp"
    android:clipToPadding="false"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/app_horizontal_margin"
        android:layout_marginEnd="@dimen/app_horizontal_margin"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:textAllCaps="true"
            android:textSize="@dimen/root_regular_text"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anytime"
            android:textSize="@dimen/root_regular_text"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/regular_card_radius"
            android:id="@+id/anyTimeEmptyCard"
            android:layout_marginTop="@dimen/app_vertical_margin"
            android:layout_marginBottom="@dimen/app_vertical_margin"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/root_view_padding"
                android:textSize="@dimen/root_title_text"
                android:text="@string/no_habit_set"/>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/anytimeHabitRecycler"
            android:layout_marginBottom="@dimen/app_vertical_margin"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morning"
            android:textSize="@dimen/root_regular_text"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/regular_card_radius"
            android:visibility="gone"
            android:id="@+id/morningEmptyCard"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/root_view_padding"
                android:textSize="@dimen/root_title_text"
                android:text="@string/no_habit_set"/>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/morningHabitRecycler"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_vertical_margin"
            android:text="@string/afternoon"
            android:textSize="@dimen/root_regular_text"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/regular_card_radius"
            android:visibility="gone"
            android:id="@+id/afternoonEmptyCard"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/root_view_padding"
                android:textSize="@dimen/root_title_text"
                android:text="@string/no_habit_set"/>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/afternoonHabitRecycler"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evening"
            android:layout_marginTop="@dimen/app_vertical_margin"
            android:textSize="@dimen/root_regular_text"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/regular_card_radius"
            android:visibility="gone"
            android:id="@+id/eveningEmptyCard"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/root_view_padding"
                android:textSize="@dimen/root_title_text"
                android:text="@string/no_habit_set"/>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/eveningHabitRecycler"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>