<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/fragment_bottom_padding_in_navigation"
    android:clipToPadding="false"
    android:background="#ddd"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/card_light"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="24dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/premium_benefit_logo_size"
                android:layout_height="@dimen/premium_benefit_logo_size"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:padding="@dimen/root_view_padding"
                android:background="@drawable/button_background1"
                android:src="@drawable/premium_icon1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/benefit1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/benefit1"
                android:textSize="@dimen/premium_benefit_text"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/premium_benefit_logo_size"
                android:layout_height="@dimen/premium_benefit_logo_size"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:padding="@dimen/root_view_padding"
                android:background="@drawable/button_background1"
                android:src="@drawable/premium_icon2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/premium_benefit_logo_size"
                android:layout_height="@dimen/premium_benefit_logo_size"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:padding="@dimen/root_view_padding"
                android:background="@drawable/button_background1"
                android:src="@drawable/premium_icon3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <TextView
                android:id="@+id/benefit2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/benefit2"
                android:textSize="@dimen/premium_benefit_text"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4" />

            <TextView
                android:id="@+id/benefit3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/benefit3"
                android:textSize="@dimen/premium_benefit_text"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:layout_width="match_parent"
            android:text="@string/premium_offer_text"
            android:textAllCaps="true"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="38dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="match_parent"
            android:text="@string/continue_button"
            app:backgroundTint="@null"
            android:textSize="22sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/button_background"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/premium_offer_text2"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/card_bottom_margin"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:padding="@dimen/root_view_padding"
            android:background="@drawable/card_light"
            android:id="@+id/subscriptionInfoRecycler"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>