<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp"
    android:clipToPadding="false"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profile_title"
            android:textAllCaps="true"
            android:layout_marginStart="@dimen/app_horizontal_margin"
            android:layout_marginTop="@dimen/app_vertical_margin"
            android:textStyle="bold"
            android:textSize="@dimen/root_title_text"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/card_black"
            android:id="@+id/backAndRestLayout"
            android:animateLayoutChanges="true"
            android:layout_marginTop="@dimen/app_vertical_margin"
            android:layout_marginStart="@dimen/app_horizontal_margin"
            android:layout_marginEnd="@dimen/app_horizontal_margin"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="@dimen/backup_icon_size"
                android:layout_height="@dimen/backup_icon_size"
                android:layout_marginStart="@dimen/backup_card_padding"
                android:src="@drawable/backup"
                android:layout_marginBottom="@dimen/backup_card_padding"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/backup_card_padding"
                android:layout_marginTop="@dimen/backup_card_padding"
                android:text="@string/backup_restore"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/root_title_text"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/backup_card_padding"
                android:text="@string/sign_in_info"
                android:textColor="@color/white"
                android:paddingBottom="@dimen/backup_card_padding"
                android:textSize="@dimen/root_regular_text"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/loginCollapsedLayout"
                android:visibility="gone"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/continue_with"
                    android:textSize="18sp"
                    android:layout_marginEnd="50dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/google"
                    android:id="@+id/loginGoogleBtn" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/facebook"
                    android:id="@+id/loginFacebookBtn"
                    android:contentDescription="@string/facebook_app_id" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/goPremiumBtn"
            android:background="@drawable/button_background"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:layout_marginTop="@dimen/app_vertical_margin"
            android:padding="@dimen/root_view_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:tint="#fff"
                android:layout_gravity="center"
                android:src="@drawable/premium"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/premium_title"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/backup_card_padding"
                android:layout_gravity="center"
                android:textSize="@dimen/root_title_text"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginStart="@dimen/app_horizontal_margin"
            android:layout_marginEnd="@dimen/app_horizontal_margin"
            android:layout_marginTop="@dimen/app_vertical_margin"
            android:layout_width="match_parent"
            android:id="@+id/myProfileOptionsRecycler"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>